--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
             <h1 class="name">انا محمد</h1>
             <h1 class="title">مأذون شرعى</h1>
 <div class="herobtns">
-                <a class="hireme" href="#contact me" 
->تكلم معى</a>   
-            </div>
+    <button class="btn-talk" onclick="location.href='#contact me'">تكلم معى</button>
+</div>
+
+
 
             
         </div>
@@ -87,6 +88,15 @@
 
 
 
+
+
+
+
+
+
+
+
+
 <section class="contactcontainer" id="contact me">
 
 
@@ -96,7 +106,6 @@
 <div class="ContactTitle"> 
 <h1 class="aboutname">تواصل </h1>
 <h1 class="aboutTitle">معى</h1>
-
 
 
 
@@ -187,14 +196,15 @@
 
 
 
-
-
-
 </section>
 <hr>
 <footer>
     <p>Built by Anas.</p>
 </footer>
+
+
+
+
 
 
 
