--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <header>
-        <img src="logo.png" alt="Mohamed logo" class="mohamedlogo">
-        <nav class="navigation">
+    <header id="up">
+        <img src="logo.png" alt="Mohamed logo" class="mohamedlogo" >
+        <nav class="navigation" >
             <ul>
 
                 <li><a href="#aboutme">نبذه عنى </a></li>
@@ -38,10 +38,10 @@
         <div class="herosup">
             <h1 class="name">انا محمد</h1>
             <h1 class="title">مأذون شرعى</h1>
-<div class="herobtns">
-    <button class="btn-talk" onclick="location.href='#contact me'">تكلم معى</button>
-</div>
 
+             <div class="heroBtns">
+          <a class="hireMe" href="#contact me">تواصل معى</a>
+             </div>
 
 
             
@@ -177,7 +177,7 @@
 
 
 <footer id="footer">
-<a href="#hero" class="scrooll_up"><i class="fa-solid fa-arrow-up"></i></a>
+<a href="#up" class="scrooll_up"><i class="fa-solid fa-arrow-up"></i></a>
 </footer>
 
 
